--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -11,5 +11,10 @@
     color="accent"
     (click)="onAddPost()">
     Save Post</button>
+  <button
+    mat-raised-button
+    color="accent"
+    (click)="onDeletePost()">
+    delete Post</button>
   </mat-card>
 
